Migrate pcep-spi to OSGi DS
This is a simple whiteboard, refactor it to use OSGi DS (and others).
The changes here cascade through all extensions, making them properly
stateless.

JIRA: BGPCEP-961
Change-Id: I1e8f253f2ea7a2eef494c84612a867b6318a93c6
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>