@@ -16,7 +16,6 @@ import io.netty.buffer.ByteBuf;
 import io.netty.buffer.Unpooled;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import org.junit.Before;
 import org.junit.Test;
@@ -39,7 +38,6 @@ import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.iet
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.initiated.rev200720.PcinitiateBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.initiated.rev200720.Srp1Builder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.initiated.rev200720.pcinitiate.message.PcinitiateMessageBuilder;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.initiated.rev200720.pcinitiate.message.pcinitiate.message.Requests;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.initiated.rev200720.pcinitiate.message.pcinitiate.message.RequestsBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.OperationalStatus;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.PcrptBuilder;
@@ -47,9 +45,7 @@ import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.iet
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.PlspId;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.SrpIdNumber;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.Tlvs1Builder;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.lsp.identifiers.tlv.LspIdentifiers;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.lsp.identifiers.tlv.LspIdentifiersBuilder;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.lsp.identifiers.tlv.lsp.identifiers.AddressFamily;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.lsp.identifiers.tlv.lsp.identifiers.address.family.Ipv4CaseBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.lsp.object.Lsp;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.lsp.object.LspBuilder;
@@ -61,7 +57,6 @@ import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.iet
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcrpt.message.pcrpt.message.Reports;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcrpt.message.pcrpt.message.ReportsBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcupd.message.PcupdMessageBuilder;
-import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcupd.message.pcupd.message.Updates;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcupd.message.pcupd.message.UpdatesBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcupd.message.pcupd.message.updates.PathBuilder;
 import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.srp.object.Srp;
@@ -280,357 +275,337 @@ public class PCEPValidatorTest {
                 .setTlvs(new TlvsBuilder().build())
                 .addAugmentation(new Lsp1Builder().setCreate(false).build());
 
-        final org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.lsp
-            .identifiers.tlv.lsp.identifiers.address.family.ipv4._case.Ipv4Builder builder =
-                new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.lsp
-                    .identifiers.tlv.lsp.identifiers.address.family.ipv4._case.Ipv4Builder();
-        builder.setIpv4TunnelSenderAddress(new Ipv4AddressNoZone("127.0.1.1"));
-        final LspId lspId = new LspId(Uint32.ONE);
-        final TunnelId tunnelId = new TunnelId(Uint16.ONE);
-        builder.setIpv4ExtendedTunnelId(new Ipv4ExtendedTunnelId(new Ipv4AddressNoZone("127.0.1.2")));
-        builder.setIpv4TunnelEndpointAddress(new Ipv4AddressNoZone("127.0.1.3"));
-        final AddressFamily afiLsp = new Ipv4CaseBuilder().setIpv4(builder.build()).build();
-        final LspIdentifiers identifier = new LspIdentifiersBuilder().setAddressFamily(afiLsp).setLspId(lspId)
-                .setTunnelId(tunnelId).build();
         this.lspSrp = lspBuilder.build();
-        this.lsp = lspBuilder.setTlvs(new TlvsBuilder().setLspIdentifiers(identifier).build()).build();
+        this.lsp = lspBuilder.setTlvs(new TlvsBuilder()
+            .setLspIdentifiers(new LspIdentifiersBuilder()
+                .setAddressFamily(new Ipv4CaseBuilder()
+                    .setIpv4(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful
+                        .rev200720.lsp.identifiers.tlv.lsp.identifiers.address.family.ipv4._case.Ipv4Builder()
+                            .setIpv4TunnelSenderAddress(new Ipv4AddressNoZone("127.0.1.1"))
+                            .setIpv4ExtendedTunnelId(new Ipv4ExtendedTunnelId(new Ipv4AddressNoZone("127.0.1.2")))
+                            .setIpv4TunnelEndpointAddress(new Ipv4AddressNoZone("127.0.1.3"))
+                            .build())
+                    .build())
+                .setLspId(new LspId(Uint32.ONE))
+                .setTunnelId(new TunnelId(Uint16.ONE))
+                .build())
+            .build())
+            .build();
 
-        final Ipv4Builder afi = new Ipv4Builder();
-        afi.setSourceIpv4Address(new Ipv4AddressNoZone("255.255.255.255"));
-        afi.setDestinationIpv4Address(new Ipv4AddressNoZone("255.255.255.255"));
+        final Ipv4Builder afi = new Ipv4Builder()
+            .setSourceIpv4Address(new Ipv4AddressNoZone("255.255.255.255"))
+            .setDestinationIpv4Address(new Ipv4AddressNoZone("255.255.255.255"));
 
-        final org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109.bandwidth.object
-            .BandwidthBuilder bandwidthBuilder = new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang
-                .pcep.types.rev181109.bandwidth.object.BandwidthBuilder();
-        bandwidthBuilder.setIgnore(false);
-        bandwidthBuilder.setProcessingRule(false);
-        bandwidthBuilder.setBandwidth(new Bandwidth(new byte[] { (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x00 }));
-        this.bandwidth = bandwidthBuilder.build();
+        this.bandwidth = new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109
+            .bandwidth.object.BandwidthBuilder()
+                .setIgnore(false)
+                .setProcessingRule(false)
+                .setBandwidth(new Bandwidth(new byte[] { (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x00 }))
+                .build();
 
-        final org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109.reoptimization
-            .bandwidth.object.ReoptimizationBandwidthBuilder reoptimizationBandwidthBuilder = new org.opendaylight.yang
-                .gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109.reoptimization.bandwidth.object
-                .ReoptimizationBandwidthBuilder();
-        reoptimizationBandwidthBuilder.setIgnore(false);
-        reoptimizationBandwidthBuilder.setProcessingRule(false);
-        reoptimizationBandwidthBuilder.setBandwidth(
-            new Bandwidth(new byte[] { (byte) 0x47, (byte) 0x74, (byte) 0x24, (byte) 0x00 }));
-        this.reoptimizationBandwidth = reoptimizationBandwidthBuilder.build();
+        this.reoptimizationBandwidth = new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types
+            .rev181109.reoptimization.bandwidth.object.ReoptimizationBandwidthBuilder()
+                .setIgnore(false)
+                .setProcessingRule(false)
+                .setBandwidth(new Bandwidth(new byte[] { (byte) 0x47, (byte) 0x74, (byte) 0x24, (byte) 0x00 }))
+                .build();
     }
 
     @Test
     public void testOpenMsg() throws IOException, PCEPDeserializerException {
-        try (StatefulActivator a = new StatefulActivator()) {
-            a.start(this.ctx);
-            final ByteBuf result = Unpooled.wrappedBuffer(
-                ByteArray.fileToBytes("src/test/resources/PCEPOpenMessage1.bin"));
-            final PCEPOpenMessageParser parser = new PCEPOpenMessageParser(this.ctx.getObjectHandlerRegistry());
-            final OpenMessageBuilder builder = new OpenMessageBuilder();
+        new StatefulActivator().start(this.ctx);
 
-            final org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109.open.object
-                .OpenBuilder b = new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types
-                    .rev181109.open.object.OpenBuilder()
-                    .setProcessingRule(false)
-                    .setIgnore(false)
-                    .setVersion(new ProtocolVersion(Uint8.ONE))
-                    .setKeepalive(Uint8.valueOf(30))
-                    .setDeadTimer(Uint8.valueOf(120))
-                    .setSessionId(Uint8.ONE)
-                    .setTlvs(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109
-                        .open.object.open.TlvsBuilder()
-                            .addAugmentation(new Tlvs1Builder()
-                                .setStateful(new StatefulBuilder().setLspUpdateCapability(Boolean.TRUE).build())
-                                .build())
-                            .build());
-            builder.setOpen(b.build());
+        final ByteBuf result = Unpooled.wrappedBuffer(
+            ByteArray.fileToBytes("src/test/resources/PCEPOpenMessage1.bin"));
+        final PCEPOpenMessageParser parser = new PCEPOpenMessageParser(this.ctx.getObjectHandlerRegistry());
+        final OpenMessageBuilder builder = new OpenMessageBuilder()
+            .setOpen(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109.open
+                .object.OpenBuilder()
+                .setProcessingRule(false)
+            .setIgnore(false)
+            .setVersion(new ProtocolVersion(Uint8.ONE))
+            .setKeepalive(Uint8.valueOf(30))
+            .setDeadTimer(Uint8.valueOf(120))
+            .setSessionId(Uint8.ONE)
+            .setTlvs(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109
+                .open.object.open.TlvsBuilder()
+                    .addAugmentation(new Tlvs1Builder()
+                        .setStateful(new StatefulBuilder().setLspUpdateCapability(Boolean.TRUE).build())
+                        .build())
+                    .build())
+            .build());
 
-            assertEquals(new OpenBuilder().setOpenMessage(builder.build()).build(), parser.parseMessage(result.slice(4,
-                result.readableBytes() - 4), Collections.emptyList()));
-            final ByteBuf buf = Unpooled.buffer(result.readableBytes());
-            parser.serializeMessage(new OpenBuilder().setOpenMessage(builder.build()).build(), buf);
-            assertArrayEquals(result.array(), buf.array());
-        }
+        assertEquals(new OpenBuilder().setOpenMessage(builder.build()).build(), parser.parseMessage(result.slice(4,
+            result.readableBytes() - 4), List.of()));
+        final ByteBuf buf = Unpooled.buffer(result.readableBytes());
+        parser.serializeMessage(new OpenBuilder().setOpenMessage(builder.build()).build(), buf);
+        assertArrayEquals(result.array(), buf.array());
     }
 
     @Test
     public void testSyncOptActivator() {
-        try (SyncOptimizationsActivator a = new SyncOptimizationsActivator()) {
-            a.start(this.ctx);
-            a.close();
-        }
+        new SyncOptimizationsActivator().start(ctx);
     }
 
     @Test
     public void testUpdMsg() throws IOException, PCEPDeserializerException {
-        try (InitiatedActivator a = new InitiatedActivator()) {
-            a.start(this.ctx);
-            final StatefulPCUpdateRequestMessageParser parser = new StatefulPCUpdateRequestMessageParser(
-                this.ctx.getObjectHandlerRegistry());
+        new InitiatedActivator().start(ctx);
+        final StatefulPCUpdateRequestMessageParser parser = new StatefulPCUpdateRequestMessageParser(
+            this.ctx.getObjectHandlerRegistry());
 
-            final PcupdMessageBuilder builder = new PcupdMessageBuilder();
+        final PathBuilder pBuilder = new PathBuilder()
+            .setEro(this.ero)
+            .setLspa(this.lspa);
+        final PcupdMessageBuilder builder = new PcupdMessageBuilder()
+            .setUpdates(List.of(
+                new UpdatesBuilder().setSrp(this.srp).setLsp(this.lspSrp).setPath(pBuilder.build()).build()));
 
-            final List<Updates> updates = new ArrayList<>();
-            final PathBuilder pBuilder = new PathBuilder();
-            pBuilder.setEro(this.ero);
-            pBuilder.setLspa(this.lspa);
-            updates.add(new UpdatesBuilder().setSrp(this.srp).setLsp(this.lspSrp).setPath(pBuilder.build()).build());
-            builder.setUpdates(updates);
+        ByteBuf result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCUpd.2.bin"));
+        assertEquals(new PcupdBuilder().setPcupdMessage(builder.build()).build(),
+            parser.parseMessage(result.slice(4, result.readableBytes() - 4), List.of()));
+        ByteBuf buf = Unpooled.buffer(result.readableBytes());
+        parser.serializeMessage(new PcupdBuilder().setPcupdMessage(builder.build()).build(), buf);
+        assertArrayEquals(result.array(), buf.array());
 
-            ByteBuf result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCUpd.2.bin"));
-            assertEquals(new PcupdBuilder().setPcupdMessage(builder.build()).build(),
-                parser.parseMessage(result.slice(4, result.readableBytes() - 4), Collections.emptyList()));
-            ByteBuf buf = Unpooled.buffer(result.readableBytes());
-            parser.serializeMessage(new PcupdBuilder().setPcupdMessage(builder.build()).build(), buf);
-            assertArrayEquals(result.array(), buf.array());
+        builder.setUpdates(List.of(
+            new UpdatesBuilder().setSrp(this.srp).setLsp(this.lspSrp).setPath(pBuilder.build()).build(),
+            new UpdatesBuilder().setSrp(this.srp).setLsp(this.lspSrp).setPath(new PathBuilder()
+                .setEro(this.ero)
+                .setLspa(this.lspa)
+                .build())
+            .build()));
 
-            final List<Updates> updates1 = new ArrayList<>();
-            final PathBuilder pBuilder1 = new PathBuilder();
-            pBuilder1.setEro(this.ero);
-            pBuilder1.setLspa(this.lspa);
-            updates1.add(new UpdatesBuilder().setSrp(this.srp).setLsp(this.lspSrp).setPath(pBuilder.build()).build());
-            updates1.add(new UpdatesBuilder().setSrp(this.srp).setLsp(this.lspSrp).setPath(pBuilder1.build()).build());
-            builder.setUpdates(updates1);
-
-            result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCUpd.5.bin"));
-            assertEquals(new PcupdBuilder().setPcupdMessage(builder.build()).build(),
-                parser.parseMessage(result.slice(4, result.readableBytes() - 4), Collections.emptyList()));
-            buf = Unpooled.buffer(result.readableBytes());
-            parser.serializeMessage(new PcupdBuilder().setPcupdMessage(builder.build()).build(), buf);
-            assertArrayEquals(result.array(), buf.array());
-        }
+        result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCUpd.5.bin"));
+        assertEquals(new PcupdBuilder().setPcupdMessage(builder.build()).build(),
+            parser.parseMessage(result.slice(4, result.readableBytes() - 4), List.of()));
+        buf = Unpooled.buffer(result.readableBytes());
+        parser.serializeMessage(new PcupdBuilder().setPcupdMessage(builder.build()).build(), buf);
+        assertArrayEquals(result.array(), buf.array());
     }
 
     @Test
     public void testRptMsg() throws IOException, PCEPDeserializerException {
-        try (InitiatedActivator a = new InitiatedActivator();
-                StatefulActivator b = new StatefulActivator()) {
-            a.start(this.ctx);
-            b.start(this.ctx);
-            ByteBuf result = Unpooled.wrappedBuffer(PCRT1);
+        new InitiatedActivator().start(ctx);
+        new StatefulActivator().start(ctx);
+        ByteBuf result = Unpooled.wrappedBuffer(PCRT1);
 
-            final StatefulPCReportMessageParser parser = new StatefulPCReportMessageParser(
-                this.ctx.getObjectHandlerRegistry());
+        final StatefulPCReportMessageParser parser = new StatefulPCReportMessageParser(
+            this.ctx.getObjectHandlerRegistry());
 
-            final PcrptMessageBuilder builder = new PcrptMessageBuilder();
+        final PcrptMessageBuilder builder = new PcrptMessageBuilder();
 
-            final List<Reports> reports = new ArrayList<>();
-            reports.add(new ReportsBuilder().setLsp(this.lsp).build());
-            builder.setReports(reports);
-            final Message parseResult = parser.parseMessage(result.slice(4, result.readableBytes() - 4),
-                Collections.emptyList());
-            assertEquals(new PcrptBuilder().setPcrptMessage(builder.build()).build(), parseResult);
-            ByteBuf buf = Unpooled.buffer(result.readableBytes());
-            parser.serializeMessage(new PcrptBuilder().setPcrptMessage(builder.build()).build(), buf);
-            assertArrayEquals(result.array(), buf.array());
+        final List<Reports> reports = new ArrayList<>();
+        reports.add(new ReportsBuilder().setLsp(this.lsp).build());
+        builder.setReports(reports);
+        final Message parseResult = parser.parseMessage(result.slice(4, result.readableBytes() - 4),
+            List.of());
+        assertEquals(new PcrptBuilder().setPcrptMessage(builder.build()).build(), parseResult);
+        ByteBuf buf = Unpooled.buffer(result.readableBytes());
+        parser.serializeMessage(new PcrptBuilder().setPcrptMessage(builder.build()).build(), buf);
+        assertArrayEquals(result.array(), buf.array());
 
-            result = Unpooled.wrappedBuffer(PCRT2);
+        result = Unpooled.wrappedBuffer(PCRT2);
 
-            final List<Reports> reports1 = new ArrayList<>();
-            reports1.add(new ReportsBuilder().setLsp(this.lsp).setPath(new org.opendaylight.yang.gen.v1.urn.opendaylight
-                    .params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcrpt.message.pcrpt.message.reports.PathBuilder()
-                        .setEro(this.ero).setLspa(this.lspa).build()).build());
-            builder.setReports(reports1);
+        builder.setReports(List.of(new ReportsBuilder()
+            .setLsp(this.lsp)
+            .setPath(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720
+                .pcrpt.message.pcrpt.message.reports.PathBuilder()
+                    .setEro(this.ero)
+                    .setLspa(this.lspa)
+                    .build())
+            .build()));
 
-            final ByteBuf input = result.slice(4, result.readableBytes() - 4);
-            assertEquals(new PcrptBuilder().setPcrptMessage(builder.build()).build(),
-                parser.parseMessage(input, Collections.emptyList()));
-            buf = Unpooled.buffer(result.readableBytes());
-            parser.serializeMessage(new PcrptBuilder().setPcrptMessage(builder.build()).build(), buf);
-            assertArrayEquals(result.array(), buf.array());
+        final ByteBuf input = result.slice(4, result.readableBytes() - 4);
+        assertEquals(new PcrptBuilder().setPcrptMessage(builder.build()).build(),
+            parser.parseMessage(input, List.of()));
+        buf = Unpooled.buffer(result.readableBytes());
+        parser.serializeMessage(new PcrptBuilder().setPcrptMessage(builder.build()).build(), buf);
+        assertArrayEquals(result.array(), buf.array());
 
-            result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCRpt.3.bin"));
+        result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCRpt.3.bin"));
 
-            final List<Reports> reports2 = new ArrayList<>();
-            final org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcrpt
-                .message.pcrpt.message.reports.PathBuilder pBuilder = new org.opendaylight.yang.gen.v1.urn.opendaylight
-                    .params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcrpt.message.pcrpt.message.reports.PathBuilder();
-            pBuilder.setEro(this.ero);
-            pBuilder.setLspa(this.lspa);
-            pBuilder.setMetrics(Lists.newArrayList(this.metrics, this.metrics));
-            pBuilder.setRro(this.rro);
-            reports2.add(new ReportsBuilder().setSrp(this.srp).setLsp(this.lspSrp).setPath(pBuilder.build()).build());
-            builder.setReports(reports2);
+        final List<Reports> reports2 = new ArrayList<>();
+        final var pBuilder = new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful
+            .rev200720.pcrpt.message.pcrpt.message.reports.PathBuilder();
+        pBuilder.setEro(this.ero);
+        pBuilder.setLspa(this.lspa);
+        pBuilder.setMetrics(Lists.newArrayList(this.metrics, this.metrics));
+        pBuilder.setRro(this.rro);
+        reports2.add(new ReportsBuilder().setSrp(this.srp).setLsp(this.lspSrp).setPath(pBuilder.build()).build());
+        builder.setReports(reports2);
 
-            assertEquals(new PcrptBuilder().setPcrptMessage(builder.build()).build(),
-                parser.parseMessage(result.slice(4, result.readableBytes() - 4), Collections.emptyList()));
-            buf = Unpooled.buffer(result.readableBytes());
-            parser.serializeMessage(new PcrptBuilder().setPcrptMessage(builder.build()).build(), buf);
-            assertArrayEquals(result.array(), buf.array());
+        assertEquals(new PcrptBuilder().setPcrptMessage(builder.build()).build(),
+            parser.parseMessage(result.slice(4, result.readableBytes() - 4), List.of()));
+        buf = Unpooled.buffer(result.readableBytes());
+        parser.serializeMessage(new PcrptBuilder().setPcrptMessage(builder.build()).build(), buf);
+        assertArrayEquals(result.array(), buf.array());
 
-            result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCRpt.5.bin"));
+        result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCRpt.5.bin"));
 
-            final List<Reports> reports3 = new ArrayList<>();
-            final org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcrpt
-                .message.pcrpt.message.reports.PathBuilder pBuilder1 = new org.opendaylight.yang.gen.v1.urn.opendaylight
-                .params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcrpt.message.pcrpt.message.reports.PathBuilder();
-            pBuilder1.setEro(this.ero);
-            pBuilder1.setLspa(this.lspa);
-            pBuilder1.setMetrics(Lists.newArrayList(this.metrics, this.metrics));
-            pBuilder1.setRro(this.rro);
-            reports3.add(new ReportsBuilder().setSrp(this.srp).setLsp(this.lspSrp).setPath(pBuilder.build()).build());
-            reports3.add(new ReportsBuilder().setSrp(this.srp).setLsp(this.lspSrp).setPath(pBuilder1.build()).build());
-            builder.setReports(reports3);
+        final List<Reports> reports3 = new ArrayList<>();
+        final var pBuilder1 = new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful
+            .rev200720.pcrpt.message.pcrpt.message.reports.PathBuilder();
+        pBuilder1.setEro(this.ero);
+        pBuilder1.setLspa(this.lspa);
+        pBuilder1.setMetrics(Lists.newArrayList(this.metrics, this.metrics));
+        pBuilder1.setRro(this.rro);
+        reports3.add(new ReportsBuilder().setSrp(this.srp).setLsp(this.lspSrp).setPath(pBuilder.build()).build());
+        reports3.add(new ReportsBuilder().setSrp(this.srp).setLsp(this.lspSrp).setPath(pBuilder1.build()).build());
+        builder.setReports(reports3);
 
-            assertEquals(new PcrptBuilder().setPcrptMessage(builder.build()).build(),
-                parser.parseMessage(result.slice(4, result.readableBytes() - 4), Collections.emptyList()));
-            buf = Unpooled.buffer(result.readableBytes());
-            parser.serializeMessage(new PcrptBuilder().setPcrptMessage(builder.build()).build(), buf);
-            assertArrayEquals(result.array(), buf.array());
+        assertEquals(new PcrptBuilder().setPcrptMessage(builder.build()).build(),
+            parser.parseMessage(result.slice(4, result.readableBytes() - 4), List.of()));
+        buf = Unpooled.buffer(result.readableBytes());
+        parser.serializeMessage(new PcrptBuilder().setPcrptMessage(builder.build()).build(), buf);
+        assertArrayEquals(result.array(), buf.array());
 
-            result = Unpooled.wrappedBuffer(PCRT3);
+        result = Unpooled.wrappedBuffer(PCRT3);
 
-            final List<Reports> reports4 = new ArrayList<>();
-            reports4.add(new ReportsBuilder().setLsp(this.lsp).setPath(new org.opendaylight.yang.gen.v1.urn.opendaylight
-                .params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcrpt.message.pcrpt.message.reports.PathBuilder()
-                    .setEro(this.ero).setLspa(this.lspa).setBandwidth(this.bandwidth)
-                    .setReoptimizationBandwidth(this.reoptimizationBandwidth).build()).build());
-            builder.setReports(reports4);
+        final List<Reports> reports4 = new ArrayList<>();
+        reports4.add(new ReportsBuilder().setLsp(this.lsp).setPath(new org.opendaylight.yang.gen.v1.urn.opendaylight
+            .params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcrpt.message.pcrpt.message.reports.PathBuilder()
+            .setEro(this.ero).setLspa(this.lspa).setBandwidth(this.bandwidth)
+            .setReoptimizationBandwidth(this.reoptimizationBandwidth).build()).build());
+        builder.setReports(reports4);
 
-            final ByteBuf input2 = result.slice(4, result.readableBytes() - 4);
-            assertEquals(new PcrptBuilder().setPcrptMessage(builder.build()).build(),
-                parser.parseMessage(input2, Collections.emptyList()));
-            buf = Unpooled.buffer(result.readableBytes());
-            parser.serializeMessage(new PcrptBuilder().setPcrptMessage(builder.build()).build(), buf);
-            assertArrayEquals(result.array(), buf.array());
-        }
+        final ByteBuf input2 = result.slice(4, result.readableBytes() - 4);
+        assertEquals(new PcrptBuilder().setPcrptMessage(builder.build()).build(),
+            parser.parseMessage(input2, List.of()));
+        buf = Unpooled.buffer(result.readableBytes());
+        parser.serializeMessage(new PcrptBuilder().setPcrptMessage(builder.build()).build(), buf);
+        assertArrayEquals(result.array(), buf.array());
     }
 
     @Test
     public void testPcinitMsg() throws IOException, PCEPDeserializerException {
-        try (InitiatedActivator a = new InitiatedActivator()) {
-            a.start(this.ctx);
-            final ByteBuf result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/Pcinit.bin"));
+        new InitiatedActivator().start(ctx);
 
-            final InitiatedPCInitiateMessageParser parser = new InitiatedPCInitiateMessageParser(
-                this.ctx.getObjectHandlerRegistry());
+        final ByteBuf result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/Pcinit.bin"));
 
-            final PcinitiateMessageBuilder builder = new PcinitiateMessageBuilder();
-            final RequestsBuilder rBuilder = new RequestsBuilder();
+        final InitiatedPCInitiateMessageParser parser = new InitiatedPCInitiateMessageParser(
+            this.ctx.getObjectHandlerRegistry());
 
-            final List<Requests> reqs = new ArrayList<>();
-            rBuilder.setSrp(this.srp);
-            rBuilder.setLsp(this.lspSrp);
-            rBuilder.setEro(this.ero);
-            rBuilder.setLspa(this.lspa);
-            rBuilder.setMetrics(Lists.newArrayList(this.metrics));
-            rBuilder.setIro(this.iro);
-            reqs.add(rBuilder.build());
-            builder.setRequests(reqs);
+        final PcinitiateMessageBuilder builder = new PcinitiateMessageBuilder()
+            .setRequests(List.of(new RequestsBuilder()
+            .setSrp(this.srp)
+            .setLsp(this.lspSrp)
+            .setEro(this.ero)
+            .setLspa(this.lspa)
+            .setMetrics(List.of(this.metrics))
+            .setIro(this.iro)
+            .build()));
 
-            assertEquals(new PcinitiateBuilder().setPcinitiateMessage(builder.build()).build(),
-                parser.parseMessage(result.slice(4,result.readableBytes() - 4), Collections.emptyList()));
-            final ByteBuf buf = Unpooled.buffer(result.readableBytes());
-            parser.serializeMessage(new PcinitiateBuilder().setPcinitiateMessage(builder.build()).build(), buf);
-            assertArrayEquals(result.array(), buf.array());
-        }
+        assertEquals(new PcinitiateBuilder().setPcinitiateMessage(builder.build()).build(),
+            parser.parseMessage(result.slice(4,result.readableBytes() - 4), List.of()));
+        final ByteBuf buf = Unpooled.buffer(result.readableBytes());
+        parser.serializeMessage(new PcinitiateBuilder().setPcinitiateMessage(builder.build()).build(), buf);
+        assertArrayEquals(result.array(), buf.array());
     }
 
     @Test
     public void testErrorMsg() throws IOException, PCEPDeserializerException {
-        try (StatefulActivator a = new StatefulActivator()) {
-            a.start(this.ctx);
-            final StatefulErrorMessageParser parser = new StatefulErrorMessageParser(
-                this.ctx.getObjectHandlerRegistry());
+        new StatefulActivator().start(ctx);
 
-            ErrorObject error1 = new ErrorObjectBuilder().setIgnore(false).setProcessingRule(false)
-                    .setType(Uint8.valueOf(19)).setValue(Uint8.ONE).build();
+        final StatefulErrorMessageParser parser = new StatefulErrorMessageParser(
+            this.ctx.getObjectHandlerRegistry());
 
-            List<Errors> innerErr = new ArrayList<>();
-            innerErr.add(new ErrorsBuilder().setErrorObject(error1).build());
+        ErrorObject error1 = new ErrorObjectBuilder().setIgnore(false).setProcessingRule(false)
+            .setType(Uint8.valueOf(19)).setValue(Uint8.ONE).build();
 
-            PcerrMessageBuilder builder = new PcerrMessageBuilder();
-            builder.setErrors(innerErr);
-            final List<Srps> srps = new ArrayList<>();
-            srps.add(new SrpsBuilder()
-                .setSrp(new SrpBuilder()
-                    .setOperationId(new SrpIdNumber(Uint32.valueOf(3)))
-                    .setIgnore(false)
-                    .setProcessingRule(false)
-                    .setTlvs(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful
-                        .rev200720.srp.object.srp.TlvsBuilder().build())
-                    .build())
-                .build());
-            builder.setErrorType(new StatefulCaseBuilder().setStateful(new org.opendaylight.yang.gen.v1.urn.opendaylight
-                .params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcerr.pcerr.message.error.type.stateful._case
-                .StatefulBuilder().setSrps(srps).build()).build());
+        List<Errors> innerErr = new ArrayList<>();
+        innerErr.add(new ErrorsBuilder().setErrorObject(error1).build());
 
-            ByteBuf result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCErr.1.bin"));
-            assertEquals(new PcerrBuilder().setPcerrMessage(builder.build()).build(),
-                parser.parseMessage(result.slice(4, result.readableBytes() - 4), Collections.emptyList()));
-            ByteBuf buf = Unpooled.buffer(result.readableBytes());
-            parser.serializeMessage(new PcerrBuilder().setPcerrMessage(builder.build()).build(), buf);
-            assertArrayEquals(result.array(), buf.array());
+        PcerrMessageBuilder builder = new PcerrMessageBuilder();
+        builder.setErrors(innerErr);
+        final List<Srps> srps = new ArrayList<>();
+        srps.add(new SrpsBuilder()
+            .setSrp(new SrpBuilder()
+                .setOperationId(new SrpIdNumber(Uint32.valueOf(3)))
+                .setIgnore(false)
+                .setProcessingRule(false)
+                .setTlvs(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.ietf.stateful
+                    .rev200720.srp.object.srp.TlvsBuilder().build())
+                .build())
+            .build());
+        builder.setErrorType(new StatefulCaseBuilder().setStateful(new org.opendaylight.yang.gen.v1.urn.opendaylight
+            .params.xml.ns.yang.pcep.ietf.stateful.rev200720.pcerr.pcerr.message.error.type.stateful._case
+            .StatefulBuilder().setSrps(srps).build()).build());
 
-            error1 = new ErrorObjectBuilder().setIgnore(false).setProcessingRule(false).setType(Uint8.valueOf(3))
-                    .setValue(Uint8.ONE).build();
+        ByteBuf result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCErr.1.bin"));
+        assertEquals(new PcerrBuilder().setPcerrMessage(builder.build()).build(),
+            parser.parseMessage(result.slice(4, result.readableBytes() - 4), List.of()));
+        ByteBuf buf = Unpooled.buffer(result.readableBytes());
+        parser.serializeMessage(new PcerrBuilder().setPcerrMessage(builder.build()).build(), buf);
+        assertArrayEquals(result.array(), buf.array());
 
-            innerErr = new ArrayList<>();
-            builder = new PcerrMessageBuilder();
+        error1 = new ErrorObjectBuilder().setIgnore(false).setProcessingRule(false).setType(Uint8.valueOf(3))
+            .setValue(Uint8.ONE).build();
 
-            final RpBuilder rpBuilder = new RpBuilder()
-                    .setProcessingRule(true)
-                    .setIgnore(false)
-                    .setReoptimization(false)
-                    .setBiDirectional(false)
-                    .setLoose(true)
-                    .setMakeBeforeBreak(false)
-                    .setOrder(false)
-                    .setPathKey(false)
-                    .setSupplyOf(false)
-                    .setFragmentation(false)
-                    .setP2mp(false)
-                    .setEroCompression(false)
-                    .setPriority(Uint8.ONE)
-                    .setRequestId(new RequestId(Uint32.TEN))
-                    .setTlvs(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109
-                        .rp.object.rp.TlvsBuilder().build())
-                    .setProcessingRule(false);
-            final List<org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109.pcerr
-                .message.pcerr.message.error.type.request._case.request.Rps> rps = new ArrayList<>();
-            rps.add(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109.pcerr
-                .message.pcerr.message.error.type.request._case.request.RpsBuilder().setRp(rpBuilder.build()).build());
+        innerErr = new ArrayList<>();
+        builder = new PcerrMessageBuilder();
 
-            innerErr.add(new ErrorsBuilder().setErrorObject(error1).build());
+        final RpBuilder rpBuilder = new RpBuilder()
+            .setProcessingRule(true)
+            .setIgnore(false)
+            .setReoptimization(false)
+            .setBiDirectional(false)
+            .setLoose(true)
+            .setMakeBeforeBreak(false)
+            .setOrder(false)
+            .setPathKey(false)
+            .setSupplyOf(false)
+            .setFragmentation(false)
+            .setP2mp(false)
+            .setEroCompression(false)
+            .setPriority(Uint8.ONE)
+            .setRequestId(new RequestId(Uint32.TEN))
+            .setTlvs(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109
+                .rp.object.rp.TlvsBuilder().build())
+            .setProcessingRule(false);
+        final List<org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109.pcerr.message
+            .pcerr.message.error.type.request._case.request.Rps> rps = new ArrayList<>();
+        rps.add(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109.pcerr.message
+            .pcerr.message.error.type.request._case.request.RpsBuilder().setRp(rpBuilder.build()).build());
 
-            builder.setErrors(innerErr);
-            builder.setErrorType(new RequestCaseBuilder().setRequest(new RequestBuilder().setRps(rps).build()).build());
+        innerErr.add(new ErrorsBuilder().setErrorObject(error1).build());
 
-            result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCErr.5.bin"));
-            assertEquals(new PcerrBuilder().setPcerrMessage(builder.build()).build(),
-                parser.parseMessage(result.slice(4, result.readableBytes() - 4), Collections.emptyList()));
-            buf = Unpooled.buffer(result.readableBytes());
-            parser.serializeMessage(new PcerrBuilder().setPcerrMessage(builder.build()).build(), buf);
-            assertArrayEquals(result.array(), buf.array());
+        builder.setErrors(innerErr);
+        builder.setErrorType(new RequestCaseBuilder().setRequest(new RequestBuilder().setRps(rps).build()).build());
 
+        result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCErr.5.bin"));
+        assertEquals(new PcerrBuilder().setPcerrMessage(builder.build()).build(),
+            parser.parseMessage(result.slice(4, result.readableBytes() - 4), List.of()));
+        buf = Unpooled.buffer(result.readableBytes());
+        parser.serializeMessage(new PcerrBuilder().setPcerrMessage(builder.build()).build(), buf);
+        assertArrayEquals(result.array(), buf.array());
 
-            builder = new PcerrMessageBuilder();
-            error1 = new ErrorObjectBuilder().setIgnore(false).setProcessingRule(false).setType(Uint8.valueOf(3))
-                    .setValue(Uint8.ONE).build();
+        builder = new PcerrMessageBuilder();
+        error1 = new ErrorObjectBuilder().setIgnore(false).setProcessingRule(false).setType(Uint8.valueOf(3))
+            .setValue(Uint8.ONE).build();
 
-            innerErr = new ArrayList<>();
-            innerErr.add(new ErrorsBuilder().setErrorObject(error1).build());
+        innerErr = new ArrayList<>();
+        innerErr.add(new ErrorsBuilder().setErrorObject(error1).build());
 
-            builder.setErrors(innerErr);
-            builder.setErrorType(new SessionCaseBuilder().setSession(new SessionBuilder()
-                .setOpen(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109.open
-                    .object.OpenBuilder()
-                        .setDeadTimer(Uint8.ONE)
-                        .setKeepalive(Uint8.ONE)
-                        .setVersion(new ProtocolVersion(Uint8.ONE))
-                        .setSessionId(Uint8.ZERO)
-                        .setIgnore(false)
-                        .setProcessingRule(false)
-                        .setTlvs(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types
-                            .rev181109.open.object.open.TlvsBuilder().build())
-                        .build()).build()).build());
+        builder.setErrors(innerErr);
+        builder.setErrorType(new SessionCaseBuilder().setSession(new SessionBuilder()
+            .setOpen(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev181109.open
+                .object.OpenBuilder()
+                .setDeadTimer(Uint8.ONE)
+                .setKeepalive(Uint8.ONE)
+                .setVersion(new ProtocolVersion(Uint8.ONE))
+                .setSessionId(Uint8.ZERO)
+                .setIgnore(false)
+                .setProcessingRule(false)
+                .setTlvs(new org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types
+                    .rev181109.open.object.open.TlvsBuilder().build())
+                .build()).build()).build());
 
-            result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCErr.3.bin"));
-            assertEquals(new PcerrBuilder().setPcerrMessage(builder.build()).build(),
-                parser.parseMessage(result.slice(4,result.readableBytes() - 4), Collections.emptyList()));
-            buf = Unpooled.buffer(result.readableBytes());
-            parser.serializeMessage(new PcerrBuilder().setPcerrMessage(builder.build()).build(), buf);
-            assertArrayEquals(result.array(), buf.array());
-        }
+        result = Unpooled.wrappedBuffer(ByteArray.fileToBytes("src/test/resources/PCErr.3.bin"));
+        assertEquals(new PcerrBuilder().setPcerrMessage(builder.build()).build(),
+            parser.parseMessage(result.slice(4,result.readableBytes() - 4), List.of()));
+        buf = Unpooled.buffer(result.readableBytes());
+        parser.serializeMessage(new PcerrBuilder().setPcerrMessage(builder.build()).build(), buf);
+        assertArrayEquals(result.array(), buf.array());
     }
 
     @Test
@@ -649,29 +624,26 @@ public class PCEPValidatorTest {
             (byte) 0xFF, (byte) 0xFF, (byte) 0x16, (byte) 0x00
         };
 
-        try (InitiatedActivator a = new InitiatedActivator();
-                StatefulActivator b = new StatefulActivator()) {
-            a.start(this.ctx);
-            b.start(this.ctx);
-            final StatefulPCReportMessageParser parser = new StatefulPCReportMessageParser(
-                    this.ctx.getObjectHandlerRegistry());
+        new InitiatedActivator().start(ctx);
+        new StatefulActivator().start(ctx);
 
-            final PcerrMessageBuilder errMsgBuilder = new PcerrMessageBuilder();
-            errMsgBuilder.setErrors(Lists.newArrayList(new ErrorsBuilder()
+        final StatefulPCReportMessageParser parser = new StatefulPCReportMessageParser(
+            this.ctx.getObjectHandlerRegistry());
+
+        final ByteBuf buf = Unpooled.wrappedBuffer(statefulMsg);
+        final List<Message> errors = new ArrayList<>();
+        parser.parseMessage(buf.slice(4, buf.readableBytes() - 4), errors);
+        assertFalse(errors.isEmpty());
+        assertEquals(new PcerrBuilder()
+            .setPcerrMessage(new PcerrMessageBuilder()
+                .setErrors(List.of(new ErrorsBuilder()
                     .setErrorObject(new ErrorObjectBuilder()
                         .setType(Uint8.valueOf(6))
                         .setValue(Uint8.valueOf(8))
                         .build())
-                    .build()));
-            final PcerrBuilder builder = new PcerrBuilder();
-            builder.setPcerrMessage(errMsgBuilder.build());
-
-            final ByteBuf buf = Unpooled.wrappedBuffer(statefulMsg);
-            final List<Message> errors = new ArrayList<>();
-            parser.parseMessage(buf.slice(4, buf.readableBytes() - 4), errors);
-            assertFalse(errors.isEmpty());
-            assertEquals(builder.build(), errors.get(0));
-        }
+                    .build()))
+                .build())
+            .build(), errors.get(0));
     }
 
     @Test
@@ -701,27 +673,24 @@ public class PCEPValidatorTest {
             (byte) 0x00, (byte) 0x00, (byte) 0x00, (byte) 0x00
         };
 
-        try (InitiatedActivator a = new InitiatedActivator()) {
-            a.start(this.ctx);
+        new InitiatedActivator().start(ctx);
 
-            final StatefulPCUpdateRequestMessageParser parser = new StatefulPCUpdateRequestMessageParser(
-                    this.ctx.getObjectHandlerRegistry());
+        final StatefulPCUpdateRequestMessageParser parser = new StatefulPCUpdateRequestMessageParser(
+            this.ctx.getObjectHandlerRegistry());
 
-            final PcerrMessageBuilder errMsgBuilder = new PcerrMessageBuilder();
-            errMsgBuilder.setErrors(Lists.newArrayList(new ErrorsBuilder()
+        final ByteBuf buf = Unpooled.wrappedBuffer(badUpdateMsg);
+        final List<Message> errors = new ArrayList<>();
+        parser.parseMessage(buf.slice(4, buf.readableBytes() - 4), errors);
+        assertFalse(errors.isEmpty());
+        assertEquals(new PcerrBuilder()
+            .setPcerrMessage(new PcerrMessageBuilder()
+                .setErrors(List.of(new ErrorsBuilder()
                     .setErrorObject(new ErrorObjectBuilder()
                         .setType(Uint8.valueOf(6))
                         .setValue(Uint8.valueOf(10))
                         .build())
-                    .build()));
-            final PcerrBuilder builder = new PcerrBuilder();
-            builder.setPcerrMessage(errMsgBuilder.build());
-
-            final ByteBuf buf = Unpooled.wrappedBuffer(badUpdateMsg);
-            final List<Message> errors = new ArrayList<>();
-            parser.parseMessage(buf.slice(4, buf.readableBytes() - 4), errors);
-            assertFalse(errors.isEmpty());
-            assertEquals(builder.build(), errors.get(0));
-        }
+                    .build()))
+                .build())
+            .build(), errors.get(0));
     }
 }
